--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Eco_Fresh_Kaese",
   "license": "ISC",
   "devDependencies": {
+    "@octokit/rest": "^21.0.2",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^10.0.7",
     "ts-mocha": "^10.0.0",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@types/tmp": "^0.2.6",
     "fta-cli": "^2.0.0",
+    "octokit": "^4.0.2",
     "tmp": "^0.2.3"
   }
 }
